# tfs-mt

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  train.py
.github/workflows/: docs.yml  main.yml  on-release-main.yml
architecture_explain/: index.html
data/eval/: .gitignore  tfs_mt_small_251104-1748.csv  tfs_mt_small_260207-0915.csv
docs/: index.md
docs/architecture_explain/: attention.md  conclusions.md  encoder_decoder.md  enhancements_and_sizing.md  introduction.md  references.bib  tokenization_embeddings.md
docs/assets/diagrams/: architecture_schema.drawio  decoder_network.drawio  encoder_network.drawio  training_inference_flows.drawio
docs/modules/: architecture.md  data_utils.md  decoding_utils.md  embeddings.md  training_utils.md
docs/stylesheets/: extra.css
docs/training_inference/: conclusions.md  evaluation.md  inference.md  introduction.md  training.md
modules/architecture/: index.html
modules/data_utils/: index.html
modules/decoding_utils/: index.html
modules/embeddings/: index.html
modules/training_utils/: index.html
notebooks/: tfs-training-notebook.ipynb
search/: search_index.json
src/: ckpt_upload_hf.py  train.py  visualizations.py
src/tfs_mt/: architecture.py  data_utils.py  decoding_utils.py  embeddings.py  training_utils.py
src/tfs_mt/configs/: config.yml
src/tfs_mt/ignite_custom_utils/: checkpoint.py  common.py  metrics.py  trackio_logger.py  wandb_logger.py
src/tfs_mt/templates/: model_README.md
tfs_mt/: architecture.py  data_utils.py  decoding_utils.py  embeddings.py  training_utils.py
tfs_mt/configs/: config.yml  load_config.py
tfs_mt/ignite_custom_utils/: checkpoint.py  common.py  trackio_logger.py  wandb_logger.py
