[project]
name = "tfs-mt"
version = "0.0.1"
description = "Transformer from scratch for Machine Translation"
authors = [{ name = "Giovanni Spadaro", email = "giovannispada17.gs@gmail.com" }]
readme = "README.md"
keywords = ['nlp', 'deep-learning', 'transformer', 'pytorch', 'machine-translation', 'nmt']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "datasets>=4.0.0",
    "omegaconf>=2.3.0",
    "pytorch-ignite>=0.5.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tdqm>=0.0.1",
    "torch>=2.7.1",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]

[project.urls]
Homepage = "https://giovo17.github.io/tfs-mt/"
Repository = "https://github.com/Giovo17/tfs-mt"
Documentation = "https://giovo17.github.io/tfs-mt/"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pre-commit>=4.2.0",
    "tox-uv>=1.26.2",
    "mypy>=1.17",
    "ruff>=0.12.7",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "ipykernel>=6.30.1",
    "skops>=0.13.0",
    "mkdocs-drawio>=1.11.2",
    "torchinfo>=1.8.0",
    "ipywidgets>=8.1.7",
    "seaborn>=0.13.2",
    "wandb==0.19.11",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tfs_mt"]

[tool.mypy]
files = ["tfs_mt"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
